Add pokemon to Trainer view

--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,9 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+<p>Pokemons: <%= @trainer.pokemons.each do |poke| %>
+    <li>
+        <%= poke.name %>: <%= poke.level %>
+    </li>
+    <% end %
+</p>
