--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,7 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+<p>Pokemons: <% @trainer.pokemons.each do |pokemon| %>
+            <li><%= pokemon.name %>, Level: <%= pokemon.level %>, Health: <%= pokemon.health %></li>
+            <%= button_to "Damage!", damage_path(id: pokemon.id), :class => "button medium", :method => :patch %>
+            <% end %> </p>
